# OOP-4-SEMESTR

OOP Marat/: CMakeLists.txt
OOP Marat/googletest/: README.md
OOP Marat/googletest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  index.md  primer.md  quickstart-bazel.md  quickstart-cmake.md
OOP Marat/googletest/docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
OOP Marat/googletest/googletest/docs/: README.md
OOP Marat/modules/: CMakeLists.txt
OOP Marat/modules/BigInt/: bigInt.cpp  bigInt.h
OOP Marat/modules/csv/: csv.cpp  csv.h
OOP Marat/modules/dict/: dict.h
OOP Marat/modules/logger/: logger.cpp  logger.h  main.cpp
OOP Marat/modules/stack/: stack.h
OOP Marat/modules/tests/: BigIntTests.cpp  CMakeLists.txt  CsvTests.cpp  DictTests.cpp  StackTests.cpp
OOP Marat/tasks/: CMakeLists.txt
OOP Marat/tasks/CalcMach/: CMakeLists.txt  calcMach.cpp  calcMach.h  calcMachTests.cpp  main.cpp
OOP Marat/tasks/patterns/: Adapter.cpp  CMakeLists.txt  Observer.cpp  Singleton.cpp
OOP Marat/tasks/register-and-login/: CMakeLists.txt  authorizer.cpp  authorizer.h  login.cpp  register.cpp  users.txt  Пароли.txt
